--- a/HandWriting/hand_writing.ipynb
+++ b/HandWriting/hand_writing.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "#imports\n",
@@ -51,6 +51,7 @@
     }
    ],
    "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "mnist = fetch_openml('mnist_784', version=1)\n",
     "mnist.keys()"
    ]
@@ -135,7 +136,7 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 12,
+   "execution_count": 17,
    "outputs": []
   },
   {
@@ -313,7 +314,7 @@
    ],
    "source": [
     "from sklearn.model_selection import cross_val_predict\n",
-    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
     "# to get the predictions set we use cross_val_predict function\n",
     "\n",
     "y_train_pred = cross_val_predict(sgd_clf, X_train, y_train_5, cv=3)\n",
@@ -868,7 +869,199 @@
     "print(kn_classifier.predict([some_digit]))\n",
     "print(cross_val_score(kn_classifier, X_train, y_train, cv=3, scoring=\"accuracy\"))\n",
     "\n",
-    "# -> [0.9688  0.96795 0.96905] : close to 97%\n"
+    "# -> [0.9688  0.96795 0.96905] : close to 97%"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "2. Write a function that can shift an MNIST image in any direction (left, right, up,\n",
+    "or down) by one pixel.5 Then, for each image in the training set, create four shifted copies\n",
+    "(one per direction) and add them to the training set. Finally, train your\n",
+    "best model on this expanded training set and measure its accuracy on the test set.\n",
+    "You should observe that your model performs even better now! This technique of\n",
+    "artificially growing the training set is called data augmentation or training set\n",
+    "expansion."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "# Getting the data ready\n",
+    "mnist = fetch_openml('mnist_784', version=1)\n",
+    "X, y = mnist[\"data\"], mnist[\"target\"]\n",
+    "X_train2, X_test2, y_train2, y_test2 = X[:60000], X[60000:], y[:60000], y[60000:]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gathering data...\n",
+      "Training...\n",
+      "Testing...\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'cross_val_score' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-10-3e8b845d7524>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     64\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"Testing...\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     65\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 66\u001B[1;33m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mcross_val_score\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mmodel_augment\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mX_train\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0my_train\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mcv\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m3\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mscoring\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;34m\"accuracy\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     67\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'cross_val_score' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.ndimage.interpolation import shift\n",
+    "\n",
+    "# We write the functions that are going to be used for shifting the images\n",
+    "def shift_left(image):\n",
+    "    image = image.reshape((28, 28))\n",
+    "\n",
+    "    # 0 pixels down and 1 pixel to the left\n",
+    "    X_left = shift(image, [0, -1], cval=0, mode=\"constant\")\n",
+    "    return X_left.reshape([-1])\n",
+    "\n",
+    "\n",
+    "def shift_right(image):\n",
+    "    image = image.reshape((28, 28))\n",
+    "\n",
+    "    # 0 pixels down and 1 pixel to the right\n",
+    "    X_right = shift(image, [0, 1], cval=0, mode=\"constant\")\n",
+    "    return X_right.reshape([-1])\n",
+    "\n",
+    "\n",
+    "def shift_down(image):\n",
+    "    image = image.reshape((28, 28))\n",
+    "\n",
+    "    # 1 pixel down and 0 pixels to the right\n",
+    "    X_down = shift(image, [1, 0], cval=0, mode=\"constant\")\n",
+    "    return X_down.reshape([-1])\n",
+    "\n",
+    "\n",
+    "def shift_up(image):\n",
+    "    image = image.reshape((28, 28))\n",
+    "\n",
+    "    # 1 pixel up and 0 pixels to the right\n",
+    "    X_up = shift(image, [-1, 0], cval=0, mode=\"constant\")\n",
+    "    return X_up.reshape([-1])\n",
+    "\n",
+    "# Gathering all the  data that we need for training for all shifts + original dataset\n",
+    "print(\"Gathering data...\")\n",
+    "\n",
+    "X_train_augment = [i for i in X_train2]\n",
+    "y_train_augment = [i for i in y_train2]\n",
+    "\n",
+    "for image, label in zip(X_train2, y_train2):\n",
+    "    X_train_augment.append(shift_left(image))\n",
+    "    X_train_augment.append(shift_right(image))\n",
+    "    X_train_augment.append(shift_down(image))\n",
+    "    X_train_augment.append(shift_up(image))\n",
+    "    for i in range(0, 4):\n",
+    "        y_train_augment.append(label)\n",
+    "\n",
+    "# Mixing the data together\n",
+    "#print(\"Mixing it up...\")\n",
+    "\n",
+    "#mix_index = np.random.permutation(len(X_train_augment)-1)\n",
+    "#X_train_augment = np.array(X_train_augment)[mix_index]\n",
+    "#y_train_augment = np.array(y_train_augment)[mix_index]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "RandomForestClassifier(random_state=42)"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Train the dataset using random forest classifier\n",
+    "print(\"Training...\")\n",
+    "\n",
+    "model_augment = RandomForestClassifier(random_state=42)\n",
+    "model_augment.fit(X_train_augment, y_train_augment)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing...\n",
+      "Accuracy score after training on augmented dataset 0.9792\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Evaluate the created model\n",
+    "print(\"Testing...\")\n",
+    "\n",
+    "#print(cross_val_score(model_augment, X_train2, y_train2, cv=3, scoring=\"accuracy\"))\n",
+    "\n",
+    "y_pred_after_augmented = model_augment.predict(X_test)\n",
+    "score = accuracy_score(y_test, y_pred_after_augmented)\n",
+    "# We get 0.9792 accuracy\n"
    ],
    "metadata": {
     "collapsed": false,
