module done for Pytorch course and miscellaneous files for Data vis

--- a/Scientific Data Visualization/c05.ipynb
+++ b/Scientific Data Visualization/c05.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4036ec2d-b956-4bb2-b730-e778bd212fef",
    "metadata": {
@@ -11,6 +12,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bfab072f-e53c-48bc-ad12-437f5d5ca3ba",
    "metadata": {},
@@ -24,6 +26,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "81990c33-76ac-4ea9-94a5-adf04db8fae9",
    "metadata": {
@@ -49,6 +52,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "30ebbd2e-a2e4-4721-be55-6e0bf3df8028",
    "metadata": {
@@ -113,6 +117,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cb694b26-471f-4d5a-a3cb-c6a3f34143d4",
    "metadata": {
@@ -155,6 +160,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a8338a9b-25b3-4b07-9bf8-820709fa20fe",
    "metadata": {
@@ -192,6 +198,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a6af8727-a0df-438e-be65-7def86824f82",
    "metadata": {
@@ -244,6 +251,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5c1f5bb1-a981-48a7-b66b-11513743c972",
    "metadata": {
@@ -254,6 +262,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f1c7a483-3315-4617-b928-2866ff382c71",
    "metadata": {
@@ -264,6 +273,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f9014df7-50ef-4b72-aee4-217f9146e17b",
    "metadata": {
@@ -274,6 +284,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "65082225-471f-4898-9c7f-9f6ce806add6",
    "metadata": {
@@ -310,6 +321,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b2e0bd27-23ec-4bc5-b19e-f696321b56a1",
    "metadata": {
@@ -347,6 +359,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7eedbef4-6bde-41c0-8322-7da5c50de4f0",
    "metadata": {
@@ -391,6 +404,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d0aa02f7-72a5-4569-b8db-4ee701d9f366",
    "metadata": {
@@ -441,6 +455,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e623f7ff-9653-4845-8062-74cfe9cbc93e",
    "metadata": {
@@ -480,6 +495,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7d3bd567-ed35-4f1b-a7e4-554b0210195b",
    "metadata": {
@@ -559,6 +575,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a6c3b398-3143-4ead-a1ff-49c6ad8a3f57",
    "metadata": {
@@ -643,6 +660,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d8411454-10a1-4550-8d39-c27556e4b24f",
    "metadata": {
@@ -679,6 +697,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d4195bd8-2343-4bda-8b7d-b4d896b97b47",
    "metadata": {
@@ -733,6 +752,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d6f258a3-da8b-43e1-bd51-16846a31ddde",
    "metadata": {
@@ -743,6 +763,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2491e9bc-cf4c-4f03-8ca4-a02fed2a2c7b",
    "metadata": {
@@ -753,6 +774,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "842c4a83-b643-462e-8a5a-d073af2fec8f",
    "metadata": {
@@ -805,6 +827,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0096a2b4-92bb-40dd-8f4c-a85b29843179",
    "metadata": {
@@ -854,6 +877,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dcdc2081-2fa7-40a0-9900-21bd083e4269",
    "metadata": {
@@ -907,6 +931,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5b56a51d-8883-49c8-b942-561d6235cd67",
    "metadata": {
@@ -956,6 +981,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6c55b0ae-466f-4115-b2fa-16b5faf935cf",
    "metadata": {
@@ -966,6 +992,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1ae18fa4-78ac-4282-b517-0b79e86488d3",
    "metadata": {
@@ -976,6 +1003,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "28c9fd41-5d7e-431f-97ec-6eaa9ab1704f",
    "metadata": {
@@ -1034,6 +1062,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "09055dfd-e3ad-4778-9f75-c093d4f7592d",
    "metadata": {
@@ -1087,6 +1116,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dca631d9-9f91-4dcf-9d66-17b8f3bb4252",
    "metadata": {
@@ -1140,6 +1170,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ef78882c-1565-45ff-b839-d22892989e51",
    "metadata": {
@@ -1197,6 +1228,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "19717a80-6651-4708-a5f4-63141e2ceac6",
    "metadata": {
@@ -1254,6 +1286,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "66caf633-b3e8-4e37-99e1-de9be348ec14",
    "metadata": {
@@ -1308,6 +1341,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d87b9dd1-b4b8-4670-a202-02e06d163bd4",
    "metadata": {
@@ -1318,6 +1352,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "29ab0a64-732c-4a81-ab9a-04ed7b742343",
    "metadata": {
@@ -1340,6 +1375,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "469134ef-40b8-46e0-9734-e3e6edd90644",
    "metadata": {
@@ -1350,6 +1386,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d200ad7d-9193-4e3f-90ff-163c946c17ef",
    "metadata": {
@@ -1360,6 +1397,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f36f03c8-7396-464a-a022-5a8096da7181",
    "metadata": {
@@ -1372,6 +1410,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "18dfbc4e-d433-4857-a51e-f375137e4846",
    "metadata": {
@@ -1384,6 +1423,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "49b815a9-403b-4259-a377-67fe7a6541da",
    "metadata": {
@@ -1396,6 +1436,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "30cfcf13-0afe-446b-856a-7685650b08ae",
    "metadata": {
@@ -1447,7 +1488,17 @@
     "id": "vBEIE9Z7y4t_"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\t<head>\n",
+    "\t</head>\n",
+    "\t<body>\n",
+    "\t<svg width=\"200\" height=\"200\">\n",
+    "        <circle cx=\"50\" cy=\"50\" r=\"45\" stroke=\"black\" stroke-width=\"3\" fill=\"none\"/>\n",
+    "        <path d=\"M25,75 L50,25 L75,75 Z\" stroke=\"black\" stroke-width=\"3\" fill=\"none\"/>\n",
+    "        <line x1=\"50\" y1=\"25\" x2=\"50\" y2=\"75\" stroke=\"black\" stroke-width=\"3\"/>\n",
+    "\t</svg>\n",
+    "\t</body>"
+   ]
   },
   {
    "cell_type": "code",
